--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,6 @@ services:
     envVars:
       - key: EMAIL_USER
         value: seuemail@gmail.com
-      - key: EMAIL_PASS
-        value: suasenha
+      - key: kauangonzaga0@gmail.com
+        value: kauan123
     autoDeploy: true
